--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,6 +1,5 @@
-# Global owner for all files
+# This is a CODEOWNERS file.
+# Lines starting with '#' are comments.
 
-* @Lavdeg31
-
-
-
+# Make Lavadeg31 the owner of all files in the repository
+* @Lavadeg31
