--- a/vex-iq-app/app.json
+++ b/vex-iq-app/app.json
@@ -21,14 +21,16 @@
     },
     "android": {
       "package": "com.vexify.app",
+      "versionCode": 1,
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#4B6BFB"
+      },
       "permissions": [
         "android.permission.RECORD_AUDIO",
         "android.permission.MODIFY_AUDIO_SETTINGS"
       ],
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#4B6BFB"
-      }
+      "playStoreUrl": "https://play.google.com/store/apps/details?id=com.vexify.app"
     },
     "extra": {
       "eas": {
