--- a/vex-iq-app/package.json
+++ b/vex-iq-app/package.json
@@ -6,7 +6,17 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:android": "cd android && ./gradlew assembleRelease"
+  },
+  "expo": {
+    "doctor": {
+      "skipValidations": ["app-config-synced"],
+      "reactNativeDirectoryCheck": {
+        "exclude": ["react-native-chart-kit", "jwt-decode", "base-64", "bcrypt", "date-fns", "dotenv", "jwt-encode", "openai", "pdf-parse", "pg", "puppeteer"],
+        "listUnknownPackages": false
+      }
+    }
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
@@ -19,23 +29,28 @@
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.11.19",
     "@types/pg": "^8.11.0",
-    "@types/react-native": "~0.72.8",
+    "axios": "^1.7.9",
     "base-64": "^1.0.0",
     "bcrypt": "^5.1.1",
     "date-fns": "^3.3.1",
     "dotenv": "^16.4.5",
-    "expo": "~52.0.31",
-    "expo-asset": "~11.0.3",
+    "expo": "~52.0.36",
+    "expo-asset": "~11.0.4",
     "expo-av": "~15.0.2",
     "expo-crypto": "~14.0.2",
-    "expo-dev-client": "~5.0.11",
+    "expo-dev-client": "~5.0.12",
     "expo-status-bar": "~2.0.1",
     "jwt-decode": "^4.0.0",
     "jwt-encode": "^1.0.1",
+    "openai": "^4.85.4",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.11.3",
+    "puppeteer": "^24.3.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
@@ -49,5 +64,12 @@
     "sharp": "^0.33.2",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "description": "A mobile application for VEX IQ robotics competitions that helps calculate scores and manage match timing.",
+  "directories": {
+    "test": "test"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
