Update environment variables in eas.json for OpenAI, Supabase, and Gemini API keys. Enhance .easignore to exclude additional development files. Modify package.json to include new dependencies and update existing ones. Add setup-android.sh script for Android SDK configuration. Adjust Xcode project settings for consistent product name formatting.

--- a/vex-iq-app/.easignore
+++ b/vex-iq-app/.easignore
@@ -39,4 +39,17 @@ yarn-error.log*
 # Ignore common development files
 .git/
 .github/
-__tests__/ 
+__tests__/
+
+# Ignore development files
+.expo
+node_modules
+npm-debug.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
+web-report/ 
