--- a/vex-iq-app/eas.json
+++ b/vex-iq-app/eas.json
@@ -18,13 +18,28 @@
       "ios": {
         "simulator": true,
         "withoutCredentials": true
+      },
+      "distribution": "internal",
+      "env": {
+        "OPENAI_API_KEY": "your_openai_api_key_here",
+        "JWT_SECRET": "your_jwt_secret_here",
+        "SUPABASE_URL": "your_supabase_url_here",
+        "SUPABASE_ANON_KEY": "your_supabase_anon_key_here",
+        "GEMINI_API_KEY": "your_gemini_api_key_here"
       }
     },
     "development": {
       "ios": {
         "developmentClient": true,
         "distribution": "internal",
-        "withoutCredentials": true
+        "withoutCredentials": true,
+        "env": {
+          "OPENAI_API_KEY": "your_openai_api_key_here",
+          "JWT_SECRET": "your_jwt_secret_here",
+          "SUPABASE_URL": "your_supabase_url_here",
+          "SUPABASE_ANON_KEY": "your_supabase_anon_key_here",
+          "GEMINI_API_KEY": "your_gemini_api_key_here"
+        }
       }
     },
     "production": {
@@ -32,7 +47,12 @@
         "buildType": "app-bundle",
         "credentialsSource": "remote",
         "env": {
-          "ANDROID_NDK_HOME": "/Users/larsini/Library/Android/sdk/ndk/26.1.10909125"
+          "ANDROID_NDK_HOME": "/Users/larsini/Library/Android/sdk/ndk/26.1.10909125",
+          "OPENAI_API_KEY": "your_openai_api_key_here",
+          "JWT_SECRET": "your_jwt_secret_here",
+          "SUPABASE_URL": "your_supabase_url_here",
+          "SUPABASE_ANON_KEY": "your_supabase_anon_key_here",
+          "GEMINI_API_KEY": "your_gemini_api_key_here"
         }
       }
     }
