--- a/vex-iq-app/package.json
+++ b/vex-iq-app/package.json
@@ -33,6 +33,7 @@
     }
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.1",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -69,6 +70,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
+    "react-native-web": "~0.19.13",
     "victory-native": "^40.0.4"
   },
   "devDependencies": {
